# openarm_teleop

./: CMakeLists.txt  HOW_TO_START_SIMULATION.md  IK_IMPLEMENTATION_SUMMARY.md  IK_QUICK_REFERENCE.md  IK_SOLVER_GUIDE.md  KEYBOARD_MOUSE_CONTROL.md  KINEMATICS_7DOF.md  KINEMATICS_SUMMARY.md  QUICKSTART_VR.md  QUICK_GUIDE.md  README.md  README.md.backup  README_VR.md  ROS2_INTEGRATION.md  SOLUTION_SUMMARY.md  TROUBLESHOOTING.md  URDF_VERIFICATION.md  VR_CONTROL_INTERFACE.md  VR_INTERFACE_SUMMARY.md  debug_joints.py  dual_arm_demo.py  keyboard_mouse_control.py  launch_visualization.sh  openarm.urdf  openarm_bimanual.urdf  openarm_bimanual_control.urdf  openarm_bimanual_sim.urdf  openarm_kinematics.py  openarm_single_control.urdf  openarm_single_no_ee.urdf  quick_start_ros2.sh  quick_start_vr.sh  simulation_node.py  start.sh  start_complete_system.sh  start_dual_arm_demo.sh  test_7dof_ik.py  test_demo.cpp  test_dual_arm_positions.py  test_vr_interface.sh  (+3 more)
config/: openarm_sim.urdf  openarm_simple_visual.urdf  openarm_v10_follower_no_hand.urdf  simulation.rviz
control/: ik_test.cpp  openarm_bilateral_control.cpp  openarm_unilateral_control.cpp  vr_control_example.cpp
script/: launch_unilateral.sh
src/: ros2_publisher.cpp  ros2_publisher.hpp  vr_control_interface.cpp  vr_control_interface.hpp
src/controller/: dynamics.cpp  dynamics.hpp  ik_solver.cpp  ik_solver.hpp
